--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 @charset "utf-8";@import url("./reset.css"); /* layout */
-.inner { width: 100%; max-width: 1400px; height: inherit; margin: auto; } 
+.inner { width: 100%; max-width: 1400px; height: inherit; margin: auto; }
 
 .width1400 { margin: auto; max-width: 1400px; width: 100%; } 
-.pr { position: relative; } 
+.pr { position: relative; }
 .pa { position: absolute; } 
-.width100 { width: 100%; } 
+.width100 { width: 100%; }
 
 .ir_pm { display: block; overflow: hidden; font-size: 0; line-height: 0; text-indent: -9999999999px; } 
 
@@ -15,7 +15,7 @@ a:focus { outline: 1px dashed red; background: #000; color: #fff; }
 .skip_menu:focus { transform: translateY(0); } 
 
 /* layer popup */
-#layer { display: block; position: fixed; width: 450px; height: 300px; border-radius: 6px; overflow: hidden; background: #f3f3f3; box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.4); z-index: 9999; font-size: 1.1em;letter-spacing: -1px;text-align: center; padding:2em; box-sizing: border-box; line-height: 2.5; top: 50px; left: 150px; font-family: "score"; font-weight: 500; color: #5f5f5f;} 
+#layer { display: block; position: fixed; width: 450px; height: 300px; border-radius: 6px; overflow: hidden; background: #f3f3f3;/* border: 4px solid #4070b8; */ box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.4); z-index: 9999; font-size: 1.1em;letter-spacing: -1px;text-align: center; padding:2em; box-sizing: border-box; line-height: 2.5; top: 50px; left: 150px; font-family: "score"; font-weight: 500; color: #5f5f5f;} 
 #layer strong{color: #3779dc;}
 #layer button { position: absolute; cursor: pointer; width: 100%; height: 60px; left: 50%; bottom: 0px; transform: translateX(-50%); background: #4070b8; color: #fff; font-family: "score"; font-weight: 500; font-size: 1em;} 
 
@@ -247,8 +247,6 @@ section h4 { font-size: 56px; color: #222; line-height: 1; text-align: center; f
 section h4 + p { font-size: 16px; font-family: "ng"; line-height: 2.6; color: #555; font-weight: 300; text-align: center; } 
 
 /* tab menu */
-.tab-content{position: relative; min-height: 330px;}
-.tab-content>ul{position: absolute;}
 #pick .pick_btn .tab { justify-content: center; margin: 24px 0; } 
 #pick .pick_btn .tab li { position: relative; width: 170px; margin: 0 8px; background-color: #71879b; line-height: 50px; display: block; border-radius: 170px; transition: background-color 0.3s; } 
 #pick .pick_btn .tab li:hover,
@@ -264,8 +262,11 @@ section h4 + p { font-size: 16px; font-family: "ng"; line-height: 2.6; color: #5
 
 #pick .inner { position: relative; padding-bottom: 30px; } 
 
-.tab-content> ul.df { justify-content: space-between; align-items: flex-end; margin-top: 50px; font-family: "ng"; } 
-.tab-content> ul.df li { width: 257px; overflow: hidden; height: 328px; border-radius: 18px; box-shadow: 10px 0 15px rgb(0 0 0 / 15%); background-color: #fff; } 
+.tab-content{position: relative; min-height: 330px;}
+.tab-content>ul{position: absolute; display: none;}
+.tab-content{width: 100%; height: 410px; margin-bottom: 80px;}
+.tab-content> ul.df {width: 100%; justify-content: space-between; align-items: flex-end; margin-top: 50px; font-family: "ng"; } 
+.tab-content> ul.df li { width: 257px; overflow: hidden; height: 328px; border-radius: 18px; box-shadow: 10px 0 20px rgb(0 0 0 / 15%); background-color: #fff; } 
 
 .tab-content> ul.df li:nth-child(1) { margin: 0 0 100px; } 
 .tab-content> ul.df li:nth-child(2) { margin: 0 0 50px; } 
@@ -455,8 +456,11 @@ section#location .li a { display: block; position: absolute; right: 0; top: 0; z
 #quick .icon_link .site_icon5 { background-position: -409px -67px; } 
 #quick .icon_link .site_icon6 { background-position: -511px -67px; } 
 #quick .icon_link .site_icon7 { background-position: -613px -67px; } 
-#quick .icon_link ul.df { padding: 0 100px 80px; } 
-#quick .icon_link li { width: calc(100% / 7); } 
+#quick .icon_link ul.df { padding: 0 100px 80px; display: flex; justify-content: space-evenly; } 
+#quick .icon_link li {width: 102px;} 
+#quick .icon_link li a{position: relative;} 
+#quick .icon_link li a::before {opacity: 0; position: absolute; content: ""; width: 124px; height: 124px; border-radius: 50%; background-color: #63b58f; left: 50%; top: -11px; transform: translateX(-50%); transition:all 0.5s;} 
+#quick .icon_link li a:hover::before{opacity: 1;} 
 
 /* footer */
 footer { background: url(../images/footer_bg.png) center top; margin-top: -37px; padding: 90px 0 70px; background-size: cover; text-align: center; color: #fff; font-size: 14px; font-weight: 300; } 
