--- a/css/layout.css
+++ b/css/layout.css
@@ -276,14 +276,15 @@ section#location .li a { display: block; position: absolute; right: 0; top: 0; z
  0% { opacity: 0; } 
  100% { opacity: 1; } 
  }
-@-webkit-keyframes slide-in-fwd-bottom { 
+/* @-webkit-keyframes slide-in-fwd-bottom { 
  0% { transform: translateZ(-1400px) translateY(800px); opacity: 0; } 
  100% { transform: translateZ(0) translateY(0); opacity: 1; } 
  }
 @keyframes slide-in-fwd-bottom { 
  0% { transform: translateZ(-1400px) translateY(800px); opacity: 0; } 
  100% { transform: translateZ(0) translateY(0); opacity: 1; } 
- }
+ } */
+
 @-webkit-keyframes shake-horizontal { 0%,
  100% { transform: translateX(0); } 
  10%,
@@ -321,12 +322,12 @@ section#location .li a { display: block; position: absolute; right: 0; top: 0; z
  75% { opacity: 0; } 
  }
 @keyframes bounce-top { 24% { opacity: 1; } 
- 60% {  transform: translateY(-24px); -webkit-animation-timing-function: ease-in; animation-timing-function: ease-in; } 
- 85% {  transform: translateY(-12px); -webkit-animation-timing-function: ease-in; animation-timing-function: ease-in; } 
+ 60% {  transform: translateY(-24px); /* -webkit-animation-timing-function: ease-in;  */animation-timing-function: ease-in; } 
+ 85% {  transform: translateY(-12px); /* -webkit-animation-timing-function: ease-in;  */animation-timing-function: ease-in; } 
  30%,
- 50% {  transform: translateY(0); -webkit-animation-timing-function: ease-out; animation-timing-function: ease-out; } 
+ 50% {  transform: translateY(0); /* -webkit-animation-timing-function: ease-out;  */animation-timing-function: ease-out; } 
  0%,
- 100% {  transform: translateY(0); -webkit-animation-timing-function: ease-out; animation-timing-function: ease-out; opacity: 1; } 
+ 100% {  transform: translateY(0); /* -webkit-animation-timing-function: ease-out;  */animation-timing-function: ease-out; opacity: 1; } 
  }
 
 #quick::before { content: ""; display: block; position: absolute; left: 50%; top: -10%; transform: translateX(-50%); width: 200%; height: 130%; background-color: #3ca479; border-radius: 107%; z-index: -1; } 
