--- a/css/layout.css
+++ b/css/layout.css
@@ -339,8 +339,8 @@ section#location .li a { display: block; position: absolute; right: 0; top: 0; z
 #quick h5 { font-size: 24px; margin-bottom: 5px; line-height: 1.2; } 
 #quick p { line-height: 1.3; margin-bottom: 30px; font-weight: 200; } 
 #quick select { width: 100%; height: 100%; padding: 0 28px 0 20px; font-size: 18px; font-weight: 600; color: #fff; cursor: pointer; border: 0; /* //기본 스타일 제거 */
- -webkit-appearance: none; /* for chrome */
- -moz-appearance: none; /*for firefox*/
+ /* -webkit-appearance: none; */ /* for chrome */
+ /* -moz-appearance: none; */ /*for firefox*/
  appearance: none; box-sizing: border-box; /* //select 박스의 크기 방식 지정. */
  background: transparent; /* //배경색 투명 처리 */ } 
 
