--- a/css/layout.css
+++ b/css/layout.css
@@ -15,6 +15,10 @@ a:focus { outline: 1px dashed red; background: #000; color: #fff; }
 .skip_menu { position: fixed; left: 0; top: 0; background-color: #000; color: #fff; padding: 10px 15px; text-decoration: none; transform: translateY(-100%); } 
 .skip_menu:focus { transform: translateY(0); } 
 
+/* topBtn */
+#TopBtn{opacity: 0;position: fixed; right: 4%; bottom: 5%;}
+#TopBtn.on{ z-index: 1000; cursor: pointer;opacity: 1;}
+
 /* layer popup */
 #layer { display: block; position: fixed; width: 450px; height: 300px; border-radius: 6px; overflow: hidden; background: #f3f3f3; /* border: 4px solid #4070b8; */ box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.4); z-index: 9999; font-size: 1.1em; letter-spacing: -1px; text-align: center; padding:2em; box-sizing: border-box; line-height: 2.5; top: 50px; left: 150px; font-family: "score"; font-weight: 500; color: #5f5f5f; } 
 #layer strong { color: #3779dc; } 
@@ -198,6 +202,22 @@ section h4 + p { font-size: 16px; font-family: "ng"; line-height: 2.6; color: #5
 .tab-content { width: 100%; height: 410px; margin-bottom: 80px; } 
 .tab-content> ul.df { width: 100%; justify-content: space-between; align-items: flex-end; margin-top: 50px; font-family: "ng"; } 
 .tab-content> ul.df li { width: 257px; overflow: hidden; height: 328px; border-radius: 18px; box-shadow: 10px 0 20px rgb(0 0 0 / 15%); background-color: #fff; } 
+.tab-content> ul.df li a .thumb::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity 0.5s;
+    background: rgba(16,83,165,0.8) url('../images/mcont1_bg.png' ) no-repeat center;
+
+}
+.tab-content> ul.df li:hover a .thumb::before{
+    opacity: 1;
+}
 
 .tab-content> ul.df li:nth-child(1) { margin: 0 0 100px; } 
 .tab-content> ul.df li:nth-child(2) { margin: 0 0 50px; } 
@@ -223,7 +243,7 @@ section#location .li a { display: block; position: absolute; right: 0; top: 0; z
 #location .vr .vr_slider .vr_img { overflow: hidden; display: block; position: absolute; left: 35px; top: 45px; width: 165px; height: 165px; padding: 10px; border-radius: 50%; } 
 #location .vr .vr_slider .vr_img img { position: absolute; left: 50%; top: 50%; height: 100%; width: auto; transform: translate(-50%, -50%); } 
 #location .vr .vr_slider::after { position: absolute; left: 25px; top: 36px; width: 179px; height: 179px; border-radius: 50%; border: 2px solid #e9eef3; content: ""; } 
-#location .vr .vr_slider .txt { padding: 65px 30px 30px 230px; font-family: "ng"; color: #555; line-height: 2; } 
+#location .vr .vr_slider .txt {z-index: 10; padding: 65px 30px 30px 230px; font-family: "ng"; color: #555; line-height: 2; } 
 #location .vr .vr_slider .txt b { font-size: 20px; color: #000; font-family: "score"; font-weight: 800; line-height: 1.4; display: block; } 
 #location .vr .vr_slider .txt p { width: 100%; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; margin-bottom: 20px; } 
 #location .vr .vr_slider .txt b span { font-size: 20px; color: #089788; font-weight: 800; } 
@@ -232,11 +252,17 @@ section#location .li a { display: block; position: absolute; right: 0; top: 0; z
 #location .vr .vr_slider .txt ul li:first-child span { position: absolute; left: 0; top: 50%; transform: translateY(-50%); content: ""; display: block; width: 16px; height: 19px; background: url("../images/main_ir.png") 0 -30px; } 
 #location .vr .vr_slider .txt ul li:nth-child(2) span { position: absolute; left: 0; top: 50%; transform: translateY(-50%); content: ""; display: block; width: 16px; height: 19px; background: url("../images/main_ir.png") -17px -30px; } 
 
-#location .vr .vr_slider .vr_btn { width: 100%; background-color: #089788; } 
-#location .vr .vr_slider .vr_btn li { width: 100%; position: relative; padding-left: 20px; } 
-#location .vr .vr_slider .vr_btn li:first-child:after { position: absolute; right: 0; top: 50%; margin-top: -16px; width: 2px; height: 32px; border-left: 2px dotted #7ec9c1; content: ""; } 
+#location .vr .vr_slider .vr_btn { width: 100%; background-color: #089788; overflow: hidden;} 
+#location .vr .vr_slider .vr_btn li {position: relative; width: 100%; position: relative; padding-left: 20px; } 
+
+#location .vr .vr_slider .vr_btn li::before {position: absolute; left:0; top:0;width:100%; height: 100%; background: #07887a; transform: translateY(-100%); content: ''; transition: all 1s;} 
+#location .vr .vr_slider .vr_btn li::after {position: absolute; left:0; top:0;width:100%; height: 100%; background: #07887a; transform: translateY(100%); content: ''; transition: all 1s;} 
+#location .vr .vr_slider .vr_btn li:hover::before{transform: translateY(0%)}
+#location .vr .vr_slider .vr_btn li:hover::after{transform: translateY(0%)}
+
+/* #location .vr .vr_slider .vr_btn li:first-child:after { position: absolute; right: 0; top: 50%; margin-top: -16px; width: 2px; height: 32px; border-left: 2px dotted #7ec9c1; content: ""; transform: translateX(2.5px);}  */
 #location .vr .vr_slider .vr_btn li:first-child span { width: 16px; background: url("../images/main_ir.png"); } 
-#location .vr .vr_slider .vr_btn a { width: 100%; display: block; text-align: center; line-height: 89px; color: #fff; font-family: "ng"; font-weight: 700; } 
+#location .vr .vr_slider .vr_btn a {position: relative; width: 100%; display: block; text-align: center; line-height: 89px; color: #fff; font-family: "ng"; font-weight: 700; z-index: 10; } 
 
 #location .vr .vr_map { width: 50%; } 
 #location .vr .vr_map img { position: absolute; display: block; top: -220px; right: -150px; } 
@@ -346,7 +372,6 @@ section#location .li a { display: block; position: absolute; right: 0; top: 0; z
 
 #quick select::-ms-expand { display: none; /*for IE10,11*/ } 
 #quick .select_wrap { width: 100%; height: 60px; border-radius: 10px; background: #eaaf00; margin: 0 0 16px; position: relative; overflow: hidden; } 
-
 #quick .select_wrap select option { background-color: #eaaf00; border: 1px solid #fff; } 
 #quick .select_wrap .icon1,
 #quick .select_wrap .icon2,
@@ -354,18 +379,26 @@ section#location .li a { display: block; position: absolute; right: 0; top: 0; z
 #quick .select_wrap .icon1::before { position: absolute; content: ""; display: block; width: 23px; height: 29px; left: 50%; top: 50%; transform: translate(-50%, -50%); background-image: url("../images/main_ir.png"); background-position: -96px -27px; z-index: 1; } 
 #quick .select_wrap .icon2::before { position: absolute; content: ""; display: block; width: 23px; height: 29px; left: 50%; top: 50%; transform: translate(-50%, -50%); background-image: url("../images/main_ir.png"); background-position: -122px -27px; z-index: 1; } 
 #quick .select_wrap .icon3::before { position: absolute; content: ""; display: block; width: 23px; height: 29px; left: 50%; top: 50%; transform: translate(-50%, -50%); background-image: url("../images/main_ir.png"); background-position: -148px -27px; z-index: 1; } 
-#quick .n1 a { margin-top: 30px; background-color: #bc6c05; border-radius: 30px; line-height: 50px; font-weight: 600; color: #fff; display: block; text-align: center; } 
+#quick .n1 a { margin-top: 30px; background-color: #bc6c05; border-radius: 30px; line-height: 50px; font-weight: 600; color: #fff; display: block; text-align: center; transition: all .3s;} 
+#quick .n1 a:hover{
+    background-color: #8f5305;
+}
 #quick .n1 a::after { content: ""; display: inline-block; position: relative; width: 17px; height: 17px; margin: 0 0 3px 6px; background: url("../images/main_ir.png") -174px -28px; vertical-align: middle; } 
 
 #quick .n2 { width: 67%; flex-wrap: wrap; } 
 #quick .n2 a { color: #fff; display: block; padding: 40px 45px; } 
-#quick .n2 li { width: calc(100% / 2); position: relative; } 
+#quick .n2 li { width: calc(100% / 2); position: relative; transition: all .5s; cursor: pointer;} 
 #quick .n2 li:nth-child(1) { background-color: #008ce5; } 
 #quick .n2 li:nth-child(2) { background-color: #06bfcb; } 
 #quick .n2 li:nth-child(3) { background-color: #1b63c4; } 
 #quick .n2 li:nth-child(4) { background-color: #4f72d6; border-radius: 0 0 100px 0; } 
+#quick .n2 li:nth-child(1):hover { background-color: #0370b4; } 
+#quick .n2 li:nth-child(2):hover { background-color: #05a1ac; } 
+#quick .n2 li:nth-child(3):hover { background-color: #1755a7; } 
+#quick .n2 li:nth-child(4):hover { background-color: #3f5baa; } 
+#quick .n2 li:hover .more_btn{background: rgba(0, 0, 0, 0.7);}
 
-#quick .n2 li .more_btn { background: rgba(0, 0, 0, 0.2); margin-top: 55px; padding: 0 10px; font-size: 15px; border-radius: 30px; font-weight: 500; line-height: 35px; display: inline-block; } 
+#quick .n2 li .more_btn { background: rgba(0, 0, 0, 0.2); margin-top: 55px; padding: 0 10px; font-size: 15px; border-radius: 30px; font-weight: 500; line-height: 35px; display: inline-block; transition:all .5s;} 
 #quick .n2 li .more_btn::after { position: relative; top: -2px; width: 14px; height: 10px; margin-left: 5px; background: url(../images/main_ir.png) -175px -49px; vertical-align: middle; content: ""; display: inline-block; } 
 #quick .n2 li:nth-child(1)::after { background: url(../images/box2_bg.png); position: absolute; content: ""; right: 30px; bottom: 35px; width: 137px; height: 129px; } 
 #quick .n2 li:nth-child(2)::after { background: url(../images/box3_bg.png); position: absolute; content: ""; right: 30px; bottom: 35px; width: 163px; height: 128px; } 
