--- a/css/media.css
+++ b/css/media.css
@@ -1,71 +1,77 @@
-@charset "utf-8"; 
+@charset "utf-8";
 
-@media screen and (max-width:1280px) {
-    
-    .inner { max-width: 100%; padding: 0 30px; height: inherit; margin: auto; } 
-    #wrap section#main .inner{
-        padding: 0 30px;
-    }
+@media screen and (max-width: 1280px) {
+  .inner {
+    max-width: 100%;
+    padding: 0 30px;
+    height: inherit;
+    margin: auto;
+  }
+  #wrap section#main .inner {
+    padding: 0 30px;
+  }
 
-    #main .title{
-        padding-top: 40px;
-        font-size: 20px;
-    }
-    #main .title strong{
-        margin-top: -20px;
-        font-size: 32px;
-    }
-    #main .title b:first-child{
-        width: 166px;
-        height: 57px;
-        background-size: 100%;
-    }
-    #main .title b:last-child{
-        left: -18px;
-        width: 222px;
-        height: 116px;
-        background-size: 100%;
-    }
-    
-    
-    #wrap header .logo{padding: 0 0 0 30px;}
+  #main .title {
+    padding-top: 40px;
+    font-size: 20px;
+  }
+  #main .title strong {
+    margin-top: -20px;
+    font-size: 32px;
+  }
+  #main .title b:first-child {
+    width: 166px;
+    height: 57px;
+    background-size: 100%;
+  }
+  #main .title b:last-child {
+    left: -18px;
+    width: 222px;
+    height: 116px;
+    background-size: 100%;
+  }
 
-    #wrap header .header_top ul{
-        padding: 0;
-    }
+  #wrap header .logo {
+    padding: 0 0 0 30px;
+  }
 
-    nav#lnb #nav{display: none;}
-    section#main .inner{
-        max-width: 100%;
-    }
-    section#main .inner .slider .slider_img{
-        width: 640px;
-        height: auto;
-        border-radius: 0 0 50px 0;
-        margin: 0 auto;
-    }
-    section#main .inner h5 .tit1:before{
-        width: 166px;
-        height: 57px;
-        background-size: 100%;
-    }
-    section#main .inner h5 .tit2:before{
-        width: 222px;
-        height: 116px;
-        background-size: 100%;
+  #wrap header .header_top ul {
+    padding: 0;
+  }
 
-    }
-    section#main .inner h5{
-        line-height: 1.5;
-        font-size: 20px;
-    }
-    section#main .inner h5 span{
-        font-size: 32px;
-    }
-    #wrap section#main::before{
-        height: 630px;
-    }
-/*     
+  nav#lnb #nav {
+    display: none;
+  }
+  section#main .inner {
+    max-width: 100%;
+  }
+  section#main .inner .slider .slider_img {
+    width: 640px;
+    height: auto;
+    border-radius: 0 0 50px 0;
+    margin: 0 auto;
+  }
+  section#main .inner h5 .tit1:before {
+    width: 166px;
+    height: 57px;
+    background-size: 100%;
+  }
+  section#main .inner h5 .tit2:before {
+    width: 222px;
+    height: 116px;
+    background-size: 100%;
+  }
+  section#main .inner h5 {
+    line-height: 1.5;
+    font-size: 20px;
+  }
+  section#main .inner h5 span {
+    font-size: 32px;
+  }
+  #wrap section#main::before {
+    height: 630px;
+  }
+  /*     
     .main_btn .btn_left button{
         font-size: 16px;
         width: 100px;
@@ -82,42 +88,49 @@
 
     } */
 
-    #location .inner{padding: 0 30px;}
+  #location .inner {
+    padding: 0 30px;
+  }
 
-
-    #quick .notice{
-        margin: 0 0 30px;
-    }
-    #quick .icon_link ul.df{
-        padding: 0 0 20px;
-    }
+  #quick .notice {
+    margin: 0 0 30px;
+  }
+  #quick .icon_link ul.df {
+    padding: 0 0 20px;
+  }
 }
 
-@media screen and (max-width:1100px) {
-    
-    #wrap header .header_top{display: none;}
-    #location .vr .vr_slider{
-       
-        width: 100%;
-    }
-    #location .inner{padding: 0 100px;}
-    #location .vr .vr_map{display: none;}
+@media screen and (max-width: 1100px) {
+  #wrap header .header_top {
+    display: none;
+  }
+  header .header_bot {
+    top: 0;
+  }
+  #location .vr .vr_slider {
+    width: 100%;
+  }
+  #location .inner {
+    padding: 0 100px;
+  }
+  #location .vr .vr_map {
+    display: none;
+  }
 
-    #quick .inner > .df{
-        flex-direction: column;
-        margin: 20px 0 30px;
-    }
-    #quick .n1{
-        width: 100%;
-    }
-    #quick .n2{
-        width: 100%;
-    }
-
+  #quick .inner > .df {
+    flex-direction: column;
+    margin: 20px 0 30px;
+  }
+  #quick .n1 {
+    width: 100%;
+  }
+  #quick .n2 {
+    width: 100%;
+  }
 }
 
-@media screen and (max-width:800px) {
-    #quick .icon_link li{
-        width: calc(100% / 3);
-    }
+@media screen and (max-width: 800px) {
+  #quick .icon_link li {
+    width: calc(100% / 3);
+  }
 }
