--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 @charset "utf-8";
 @import url("./reset.css"); 
 @import url("./layout.css"); 
+@import url("./nav.css"); 
 @import url("./media.css"); 
+@import url("./notice.css"); 
